--- a/templates/description.html
+++ b/templates/description.html
@@ -1,12 +1,20 @@
 {% extends "main.html" %}
 {% block content %}
     <div class="jumbotron">
-        <h1>Book Catalog</h1>
-        <p>Library catalog systems</p>
+        <div class="col-sm-12"><h1>Book Catalog</h1><p>Library catalog systems</p></div>
+        {%if 'username' not in session %}
+            <a href="{{url_for('showLogin')}}">
+            <h4 class="log text-right">Login</h4></a>
+        {% else %}
+            <a href="{{url_for('gdisconnect')}}">
+            <h4 class="text-right">Disconnect</h4></a>
+        {% endif %}
     </div>
 
     <div class="well">
-        <h4 class="text-right">Login</h4>
+        {%if 'username' in session %}
+        <p style="color:green;" class="user-name text-right">{{session['username']}} is Logged</p>
+        {% endif %}
     </div>
 
     <div class="p-5 row">
