--- a/templates/catalogPublic.html
+++ b/templates/catalogPublic.html
@@ -11,12 +11,15 @@
 {% endfor %}
 
     <div class="jumbotron">
-        <div class="col-sm-12"><h1>Book Catalog</h1><p>Library catalog systems</p></div>
+        <div class="col-sm-12">
+            <h1>Book Catalog</h1>
+            <p>Library catalog systems</p>
+        </div>
         {%if 'username' not in session %}
-        <a href="{{url_for('showLogin')}}">
+            <a href="{{url_for('showLogin')}}">
             <h4 class="log text-right">Login</h4></a>
         {% else %}
-        <a href="{{url_for('gdisconnect')}}">
+            <a href="{{url_for('gdisconnect')}}">
             <h4 class="text-right">Disconnect</h4></a>
         {% endif %}
     </div>
