--- a/templates/addBook.html
+++ b/templates/addBook.html
@@ -1,6 +1,5 @@
 {% extends "main.html" %}
 {% block content %}
-
     <div class="jumbotron">
         <div class="col-sm-12"><h1>Book Catalog</h1><p>Library catalog systems</p></div>
         {%if 'username' not in session %}
@@ -14,7 +13,9 @@
 
     <div class="well">
         {%if 'username' in session %}
-        <p style="color:green;" class="user-name text-right">{{session['username']}} is Logged</p>
+            <p style="color:green;" class="user-name text-right">
+                Logged as {{session['username']}}
+            </p>
         {% endif %}
     </div>
 
@@ -33,12 +34,16 @@
                             <textarea class="form-control" rows="5" id="comment" name="description"></textarea>
                            </div>
                         <br/>
-                        <button type="submit" class="btn btn-default" id="submit">Add Book</button>
+                        <button type="submit" class="btn btn-default" id="submit">
+                            Add Book
+                        </button>
                     </form>
             </div>
             <ul class="pager">
                 <li class="previous">
-                    <a href="{{url_for('showItems', category_id = category_id )}}"><h4>Return</h4></a>
+                    <a href="{{url_for('showItems', category_id = category_id )}}">
+                        <h4>Return</h4>
+                    </a>
                 </li>
             </ul>
         </div>
