--- a/templates/addCategory.html
+++ b/templates/addCategory.html
@@ -13,7 +13,7 @@
 
     <div class="well">
         {%if 'username' in session %}
-        <p style="color:green;" class="user-name text-right">{{session['username']}} is Logged</p>
+        <p style="color:green;" class="user-name text-right">Logged as {{session['username']}}</p>
         {% endif %}
     </div>
 
@@ -21,18 +21,24 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
             <div class="jumbotron">
-                <h4 class="text-center">New Category <br/></h4>
+                <h4 class="text-center">
+                    New Category <br/>
+                </h4>
                 <form action="#" method = "post">
                     <div class="form-group">
                         <label>Category Name</label><br/>
                         <input type ="text" class="form-control" maxlength="150" name="name">
                     </div><br/>
-                    <button type="submit" class="btn btn-default" id="submit">Submit</button>
+                    <button type="submit" class="btn btn-default" id="submit">
+                        Submit
+                    </button>
                 </form>
             </div>
             <ul class="pager">
                 <li class="previous">
-                    <a href="{{url_for('showCategories')}}"><h4>Return</h4></a>
+                    <a href="{{url_for('showCategories')}}">
+                        <h4>Return</h4>
+                    </a>
                 </li>
             </ul>
         </div>
