--- a/templates/description.html
+++ b/templates/description.html
@@ -13,7 +13,7 @@
 
     <div class="well">
         {%if 'username' in session %}
-        <p style="color:green;" class="user-name text-right">{{session['username']}} is Logged</p>
+        <p style="color:green;" class="user-name text-right">Logged as {{session['username']}}</p>
         {% endif %}
     </div>
 
@@ -23,7 +23,8 @@
             <div class="jumbotron">
                 <h4 class="text-center">Category: {{category.name}}<br/></h4>
                     <h4>Title: {{book.name}}<br/>
-                    Author: {{book.author}}</h4>
+                    Author: {{book.author}}
+                    </h4>
                     <p style="font-size:16px;">{{book.description}}</p>
                     <br/><br/>
                     <a href="{{url_for('editBook', category_id = category.id, book_id = book.id)}}" role="button" class="btn btn-default">Edit</a>
@@ -34,28 +35,6 @@
                     <a href="{{url_for('showItems', category_id = category.id )}}"><h4>Return</h4></a>
                 </li>
             </ul>
-        </div>
-    </div>
-
-    <!-- Modal -->
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Delete Category</h4>
-                </div>
-                <div class="modal-body">
-                    <p>WARNING : Delete will erase <strong>{{book.name}}</strong> book </p>
-                </div>
-                <div class="modal-footer">
-                    <form class="form-inline" action="{{url_for('deleteBook', category_id = category.id, book_id = book.id)}}"  method = "post">
-                    <button type="submit" class="btn btn-danger" id="submit">Delete</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Return</button>
-                    </form>
-                </div>
-            </div>
         </div>
     </div>
 
