--- a/templates/editBook.html
+++ b/templates/editBook.html
@@ -13,7 +13,7 @@
 
     <div class="well">
         {%if 'username' in session %}
-        <p style="color:green;" class="user-name text-right">{{session['username']}} is Logged</p>
+        <p style="color:green;" class="user-name text-right">Logged as {{session['username']}}</p>
         {% endif %}
     </div>
 
