--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+        <script src="//apis.google.com/js/platform.js?onload=start"> </script>
     </head>
 	<body>
 		<div class="container">
